2005-10-06  Kristian Høgsberg  <krh@redhat.com>

	* hw/xfree86/parser/Makefile.am: Add cpconfig.c to EXTRA_DIST.
	* hw/xfree86/ramdac/Makefile.am: Add CURSOR.NOTES to EXTRA_DIST.
	* hw/xfree86/scanpci/Makefile.am: Add extrapci.ids to EXTRA_DIST
	and fix xf86PciIds.h rule.

2005-10-06  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* hw/vfb/Makefile.am:
	Install correct man page and add to dist

2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* hw/dmx/Makefile.am:
	* hw/dmx/config/Makefile.am:
	* hw/dmx/doc/Makefile.am:
	* hw/dmx/examples/Makefile.am:
	* hw/dmx/input/Makefile.am:
	Add support for building DMX config and examples programs
	Add missing files to EXTRA_DIST
	Install Xdmx man page

2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* hw/xfree86/fbdevhw/Makefile.am:
	Clean up generated files to pass distcheck

	* hw/xfree86/getconfig/Makefile.am:
	Clean up generated files to pass distcheck
	Distribute getconfig.man.pre, not getconfig.man

2005-10-05  Kristian Høgsberg  <krh@redhat.com>

	* afb/Makefile.am:
	* cfb/Makefile.am:
	* configure.ac:
	* dix/Makefile.am:
	* fb/Makefile.am:
	* hw/vfb/Makefile.am:
	* hw/xfree86/common/Makefile.am:
	* hw/xfree86/dixmods/extmod/Makefile.am:
	Add DGA configure option and add various files that we should be
	dist'ing.  Simplify xf86DefModeSet.c rule a bit.

2005-10-05  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* hw/xfree86/utils/xorgcfg/Makefile.am:
	Preprocess and install XOrgCfg.ad as in the monolith.

2005-10-04  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Bug #4038: Unbreak the SYSVIPC check for cross builds. (Detlef Vollman)

2005-10-04  Aaron Plattner  <aplattner@nvidia.com>

	* hw/xfree86/loader/Makefile.am:
	Add miext/cw to the module loader include path so that misym.c can export
	miDisableCompositeWrapper.

2005-10-03  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: Add missing ]	 (Dawid Gajownik)