@@ -1,8 +1,13 @@
+if DMX_BUILD_USB 
+# Requires <linux/input.h>
+EV_PROG = ev
+endif
+
 bin_PROGRAMS = \
 	xdmx dmxwininfo dmxreconfig dmxresize \
 	dmxaddscreen dmxrmscreen \
 	dmxaddinput dmxrminput
-noinst_PROGRAMS = xinput xtest evi res xled xbell ev
+noinst_PROGRAMS = xinput xtest evi res xled xbell $(EV_PROG)
 
 xdmx_SOURCES = xdmx.c
 xdmx_LDADD = @DMXEXAMPLES_DEP_LIBS@
